Fix Login-box and its overlays possibly confliting with sites z-indexes

--- a/css/loginbox.css
+++ b/css/loginbox.css
@@ -1,3 +1,4 @@
 #loginbox {
   display: none;
+  z-index: 15000;
 }
