--- a/css/loginbox.overlay.css
+++ b/css/loginbox.overlay.css
@@ -1,8 +1,10 @@
 #loginbox-overlay {
   background-color: rgba(0, 0, 0, 0.5);
   bottom: 0;
+  display: none;
   left: 0;
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 10000;
 }
